trunk/Archive2/c2/d74bbaa0b60f20/output
In file included from /usr/local/include/c++/4.9.2/cstdint:35:0,
                 from main.cpp:2:
/usr/local/include/c++/4.9.2/bits/c++0x_warning.h:32:2: error: #error This file requires compiler and library support for the ISO C++ 2011 standard. This support is currently experimental, and must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
 #error This file requires compiler and library support for the \
  ^
main.cpp:11:15: warning: non-static const member 'const int B::y' in class without a constructor [-Wuninitialized]
     const int y;
               ^
main.cpp: In function 'int main()':
main.cpp:16:20: error: in C++98 'b' must be initialized by constructor, not by '{...}'
     B b = { {3}, 4 };
                    ^
main.cpp:16:20: error: could not convert '{{3}, 4}' from '<brace-enclosed initializer list>' to 'B'
